# finetoo_sp

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  test_gemini.sh
binder_test_no_refs/: 18066-G-302.dxf  18066-G-305.dxf  18066-G-307.dxf
docs/: GEMINI_SETUP.md  SEMANTIC_UNDERSTANDING.md  USER_JOURNEYS.md
experiments/logical_consistency/: QUICK_START.md  README.md  README_FOR_CLAUDE.md  consistency_cli.py  demo.py  logical_consistency_scorer.py  logical_consistency_scorer_v2.py  requirements.txt  run_demo.sh  test_consistency.py  thought_to_finetoo.py
experiments/logical_consistency/examples/: complex.txt  consistent.txt  contradictions.txt  digital_brain.txt
proto/: BUILD.bazel  graph.proto  operations.proto
src/analysis/: BUILD.bazel  block_analyzer.cc  block_analyzer.h
src/cli/: BUILD.bazel
src/cloud/: BUILD.bazel  vertex_ai_client.cc  vertex_ai_client.h
src/export/: BUILD.bazel  bom_exporter.cc  bom_exporter.h
src/graph/: BUILD.bazel  graph_builder.cc  graph_builder.h
src/operations/: BUILD.bazel  operation_executor.cc  operation_executor.h
src/parser/: BUILD.bazel  dxf_text_parser.cc  dxf_text_parser.h
src/query/: BUILD.bazel  query_service.cc  query_service.h
src/schema/: BUILD.bazel  schema_analyzer.cc  schema_analyzer.h  schema_analyzer_test.cc
src/semantic/: BUILD.bazel
tools/: BUILD.bazel  demo_bom_operations.cc  demo_llm_bom.cc  demo_schema_discovery.cc  generate_full_bom.cc  parse_dxf.cc
