# Export Format Generators
# BOM reports, DXF writers, inspection checklists

# TODO: Implement BOM generator
# cc_library(
#     name = "bom_generator",
#     srcs = ["bom_generator.cc"],
#     hdrs = ["bom_generator.h"],
#     deps = [
#         "//proto:graph_cc_proto",
#         "//src/semantic:part_identifier",
#         "@com_google_absl//absl/status",
#         "@com_google_absl//absl/status:statusor",
#         "@nlohmann_json//:json",
#     ],
#     visibility = ["//visibility:public"],
# )

# TODO: Implement DXF writer
# cc_library(
#     name = "dxf_writer",
#     srcs = ["dxf_writer.cc"],
#     hdrs = ["dxf_writer.h"],
#     deps = [
#         "//proto:graph_cc_proto",
#         "//src/semantic:dimension_extractor",
#         "@com_google_absl//absl/status",
#         "@com_google_absl//absl/status:statusor",
#     ],
#     visibility = ["//visibility:public"],
# )
