# Export Format Generators
# BOM reports, DXF writers, inspection checklists

cc_library(
    name = "bom_exporter",
    srcs = ["bom_exporter.cc"],
    hdrs = ["bom_exporter.h"],
    deps = [
        "//proto:graph_cc_proto",
        "//proto:operations_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@nlohmann_json//:json",
    ],
    visibility = ["//visibility:public"],
)

# TODO: Implement DXF writer
# cc_library(
#     name = "dxf_writer",
#     srcs = ["dxf_writer.cc"],
#     hdrs = ["dxf_writer.h"],
#     deps = [
#         "//proto:graph_cc_proto",
#         "//src/semantic:dimension_extractor",
#         "@com_google_absl//absl/status",
#         "@com_google_absl//absl/status:statusor",
#     ],
#     visibility = ["//visibility:public"],
# )
