# Property Graph Implementation

cc_library(
    name = "graph_builder",
    srcs = ["graph_builder.cc"],
    hdrs = ["graph_builder.h"],
    deps = [
        "//proto:graph_cc_proto",
        "//src/parser:dxf_text_parser",
        "//src/schema:schema_analyzer",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@protobuf//:protobuf",
    ],
    visibility = ["//visibility:public"],
)

# TODO: Add tests
# cc_test(
#     name = "graph_builder_test",
#     srcs = ["graph_builder_test.cc"],
#     deps = [
#         ":graph_builder",
#         "@com_google_googletest//:gtest_main",
#     ],
# )
