# Semantic Understanding Components
# Identifies parts, extracts dimensions, classifies blocks

# TODO: Implement part identification
# cc_library(
#     name = "part_identifier",
#     srcs = ["part_identifier.cc"],
#     hdrs = ["part_identifier.h"],
#     deps = [
#         "//proto:graph_cc_proto",
#         "//src/graph:graph_builder",
#         "//src/schema:schema_analyzer",
#         "@com_google_absl//absl/status",
#         "@com_google_absl//absl/status:statusor",
#     ],
#     visibility = ["//visibility:public"],
# )

# TODO: Implement dimension extraction
# cc_library(
#     name = "dimension_extractor",
#     srcs = ["dimension_extractor.cc"],
#     hdrs = ["dimension_extractor.h"],
#     deps = [
#         "//proto:graph_cc_proto",
#         "@com_google_absl//absl/status",
#         "@com_google_absl//absl/status:statusor",
#     ],
#     visibility = ["//visibility:public"],
# )
